# X-Ray

./: .gitattributes  .gitmodules  README.md  Time Sheet FY201 B Kruse.xlsx  usage.txt  worklist.txt
KScan/: KScanNoRGB.sh  KScanRGB.sh  KScanRGBAutomated.sh  Kitchen1.pcd  PCDConverterNoRGB.py  PCDConverterRGB.py  one_button_to_rule_them_all.sh  tutorial.txt
PCLProjects/ConvertPCD2Ply/: CMakeLists.txt
PCLProjects/ConvertPCDAscii/: CMakeLists.txt  convert_pcd_ascii_binary.cpp
PCLProjects/ConvertPly2PCD/: CMakeLists.txt
PCLProjects/Converter/: CMakeLists.txt
PCLProjects/CreatePCD/: CMakeLists.txt  pcd_write.cpp
UnityProjects/offsetTracking CURRENT/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  MLSetup.txt  Mirror.Authenticators.csproj  Mirror.CompilerSymbols.csproj  Mirror.Components.csproj  Mirror.Editor.csproj  Mirror.Examples.csproj  Mirror.Weaver.csproj  Mirror.csproj  Pcx.Editor.csproj  Pcx.csproj  RealSense.csproj  Unity.VSCode.Editor.csproj  UnityEditor.TestRunner.csproj  Utils.csproj  com.sparrlab.offsettracking.package  hummer2019.privkey  offsetTracking CURRENT.sln
UnityProjects/offsetTracking_Simulation/: Assembly-CSharp-Editor.csproj  Mirror.Components.csproj  Mirror.Editor.csproj  Unity.CollabProxy.Editor.csproj  Unity.Rider.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  UnityEngine.TestRunner.csproj  XRayTriangulationInitialTrialss000.order  XRayTriangulations000.order  com.sparrlab.offsettracking.package  hummer2019.cert  offsetTracking.sln  realsense.unitypackage
catkin_ws/devel/: .catkin  .rosinstall  (+1 more)
(+183 files in other folders)
