cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(CreatePCD)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(convert_pcd_ascii_binary convert_pcd_ascii_binary.cpp)
target_link_libraries(convert_pcd_ascii_binary ${PCL_LIBRARIES})
