cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(ConvertPly2PCD)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(PCL 1.3 REQUIRED COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(ply2pcd ply2pcd.cpp)
target_link_libraries(ply2pcd ${PCL_LIBRARIES})
